--- a/manager-demo/package.json
+++ b/manager-demo/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "managerdemo",
-  "description": "demo",
+  "name": "后台系统",
+  "description": "这是一个用来装逼的后台代码",
   "version": "1.0.0",
   "author": "kingdom <kingdompk@163.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --port 8089",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.11"
   },
   "browserslist": [
