--- a/vuedemo/manager-demo/package.json
+++ b/vuedemo/manager-demo/package.json
@@ -1,23 +1,16 @@
 {
   "name": "managerdemo",
-  "description": "这是一个用来装逼的后台代码",
+  "description": "demo",
   "version": "1.0.0",
   "author": "kingdom <kingdompk@163.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --port 8089",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "echarts": "^4.1.0",
-    "font-awesome": "^4.7.0",
-    "mockjs": "^1.0.1-beta3",
-    "vue": "^2.5.11",
-    "vue-i18n": "^7.8.1",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue": "^2.5.11"
   },
   "browserslist": [
     "> 1%",
